--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -33,7 +34,6 @@
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.10.2",
     "mdbreact": "^5.2.0",
-   
     "node-sass": "^7.0.1",
     "onclick": "^0.1.0",
     "postcss": "^8.4.6",
@@ -61,7 +61,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "node app",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
