--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "17.3.1"
   },
   "dependencies": {
+    "@chakra-ui/alert": "^1.3.7",
     "@chakra-ui/checkbox": "^1.6.5",
     "@chakra-ui/icons": "^1.1.5",
     "@chakra-ui/react": "^1.8.3",
@@ -49,6 +50,7 @@
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-native": "^0.67.2",
+    "react-popup": "^0.11.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.2.0",
     "react-script": "^2.0.5",
@@ -58,6 +60,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "styled-components": "^5.3.3",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
